# python-ml-project

my_python_lib/: README.md  __init__.py  core.py  data.py  pyproject.toml  utils.py
my_python_lib/tests/: test_core.py
